[frontend] Fix corner btn alignment, Empty UTub Btn, CF and CSP (#528)
* Fix corner btn alignment on update url title

* Fix empty UTub URL btn width

* Ensure submit btn is not stale due to render template

* Fix cloudflare insights for CSP

--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -247,6 +247,10 @@ button {
     align-items: flex-end;
 }
 
+.self-start {
+    align-self: flex-start;
+}
+
 .justify-center {
     justify-content: center;
 }
